// use protobuf syntax version 3
syntax = "proto3";

// package of protobuf, here my package is goproto
package protobuf;

// imports external file protobuf
import "address.proto";
import "pagination.proto";

// i use go_package for generated protobuf because here i use Go programming language
option go_package = "generated/pb";

// for empty RPC service parameter
message Empty {}

// as entity user for protobuf schema
message User {
  // determine field for message in protobuf with format {data type} {field name} = {unique id and this is dynamic up to you}
  string id = 1;
  string name = 2;
  string email = 3;
  uint64 age = 4;

  // use keyword `repeated` to define array/slice
  repeated string hobbies = 5;

  // use custom/object datatype for address user
  repeated Address address = 6;

  // use embeded protobuf message inside protobuf message
  message Overview {
    string intro = 1;
  }
}

// as response list users with pagination
message UserResponsePagination {
  Pagination pagination = 1;
  repeated User data = 2;
}
